package de.tud.inf.st.trdm.action;

import de.tud.inf.st.trdm.Network;

public interface Action {

    void run(Network n, int t);
}
